bookinfo/overlay/app/istio-rollout/productpage/productpage-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: productpage-rollout
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: productpage-rollout
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: productpage-rollout
    spec:
      containers:
      - name: productpage-rollout
        image: ably77/bookinfo-canary:1
        ports:
        - name: http
          containerPort: 9080
          protocol: TCP
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
  strategy:
    canary:
      canaryService: productpage-rollout-canary
      stableService: productpage-rollout-stable
      # analysis will be performed in background, while rollout is progressing through its steps
      analysis:
        startingStep: 1   # index of step list, of when to start this analysis
        templates:
        - templateName: productpage-success-rate
        args:             # arguments allow AnalysisTemplates to be re-used
        - name: service 
          value: productpage-rollout-canary
        - name: namespace
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
      trafficRouting:
        istio:
          virtualService:
            name: productpage-rollout-vsvc
            routes:
            - primary
      steps:
      - setWeight: 10
      - pause: {duration: 20s}
      - setWeight: 20
      - pause: {duration: 20s}
      - setWeight: 30
      - pause: {duration: 20s}
      - setWeight: 40
      - pause: {duration: 20s}
      - setWeight: 50
      - pause: {duration: 20s}
      - setWeight: 60
      - pause: {duration: 20s}
      - setWeight: 70
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 20s}
      - setWeight: 90
      - pause: {duration: 20s}
