bookinfo/overlay/app/istio-rollout/productpage/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage-rollout-canary
spec:
  ports:
  - port: 9080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: productpage-rollout
---
apiVersion: v1
kind: Service
metadata:
  name: productpage-rollout-stable
spec:
  ports:
  - port: 9080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: productpage-rollout
