bookinfo/overlay/app/istio-rollout/productpage/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-rollout-vsvc
spec:
  gateways:
  - productpage-rollout-gateway
  hosts:
  - '*'
  #- productpage-rollout.apps.argoproj.io
  #- productpage-rollout.local
  http:
  - name: primary
    match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage-rollout-stable
        port:
          number: 9080
      weight: 100
    - destination:
        host: productpage-rollout-canary
        port:
          number: 9080
      weight: 0
